# iCHIP

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
outputs/: summary_skywater_NMOS_n_lvt.html
src/iCHIP/: characterisation.py
src/iCHIP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/iCHIP/resources/: char_schem_NMOS_vds.sch  char_schem_NMOS_vgs.sch  char_schem_PMOS_vds.sch  char_schem_PMOS_vgs.sch  report_template.txt
src/iCHIP/tests/: summary_NMOS_n.html  summary_NMOS_n_lvt.html  summary_PMOS_p.html  summary_PMOS_p_lvt.html  test_char_SKYN.py  test_char_SKYP.py  test_char_SKY_N18.py  test_char_SKY_N5.py  test_char_SKY_P18.py  test_char_SKY_P5.py
src/iCHIP/tests/test_data/: skywater_char_NMOS_1V8_vgs.raw  skywater_char_NMOS_3V_vds.raw  skywater_char_NMOS_5V_vds.raw  skywater_char_NMOS_5V_vgs.raw  skywater_char_PMOS_3V_vds.raw  skywater_char_PMOS_5V_vds.raw  skywater_char_PMOS_5V_vgs.raw  skywater_char_PMOS_vgs.raw  summary_skywater_NMOS_1V8_n.html  summary_skywater_NMOS_3V_n.html  summary_skywater_NMOS_5V_n.html  summary_skywater_NMOS_n.html  summary_skywater_PMOS_1V8_p.html  summary_skywater_PMOS_3V_p.html  summary_skywater_PMOS_5V_p.html  summary_skywater_PMOS_p.html
