[metadata]
name = iCHIP
version = 0.0.1
author = sobremesa87
author_email = sobremesa87@gmail.com
description = Inversion Co-efficient Characterisation using Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True

install_requires =
    atomicwrites>=1.4.0
    attrs>=21.2.0
    backports.entry-points-selectable>=1.1.0
    colorama>=0.4.4
    cycler>=0.10.0
    distlib>=0.3.2
    dominate>=2.6.0
    filelock>=3.0.12
    iniconfig>=1.1.1
    Jinja2>=3.0.1
    kiwisolver>=1.3.1
    MarkupSafe>=2.0.1
    matplotlib>=3.4.3
    mpld3>=0.5.5
    numpy>=1.21.2
    packaging>=21.0
    pandas>=1.3.2
    Pillow>=8.3.1
    platformdirs>=2.2.0
    pluggy>=0.13.1
    py>=1.10.0
    pyparsing>=2.4.7
    pytest>=6.2.4
    python-dateutil>=2.8.2
    pytz>=2021.1
    scipy>=1.7.1
    six>=1.16.0
    spyci @ git+https://github.com/sobremesa87/spyci.git@c3d232c094f5491a401cca0b56e49b9f475b8994
    tabulate>=0.8.9
    toml>=0.10.2
    tox>=3.24.3
    virtualenv>=20.7.2

[options.packages.find]
where = src